@@ -1,7 +1,7 @@
 # Subtypes
-from subtypes.interfaces import IPossibleFacetedHeritor
-from subtypes.interfaces import IFacetedHeritor
+from eea.faceted.inheritance.subtypes.interfaces import IPossibleFacetedHeritor #pylint: disable-msg = W0611
+from eea.faceted.inheritance.subtypes.interfaces import IFacetedHeritor #pylint: disable-msg = W0611
 
 # Criteria
-from criteria.interfaces import IHeritorAccessor
-from criteria.interfaces import ICriteria
+from eea.faceted.inheritance.criteria.interfaces import IHeritorAccessor #pylint: disable-msg = W0611
+from eea.faceted.inheritance.criteria.interfaces import ICriteria #pylint: disable-msg = W0611
