@@ -1,4 +1,4 @@
-from zope.interface import Interface
+#from zope.interface import Interface
 from zope.interface import Interface, alsoProvides
 from zope.app.content.interfaces import IContentType
 from eea.facetednavigation.interfaces import IFacetedNavigable
